tests/harness/errors/140_invalid_string_interpolation.eu
` { type: "[number] -> {..}"}
x[a, b, c]: {}
